[gd_scene load_steps=8 format=3 uid="uid://b0skpo0q0gxdn"]

[ext_resource type="Script" path="res://Scenes/V1/screen_left.gd" id="1_4yvj6"]
[ext_resource type="PackedScene" uid="uid://cybak3h0v08rm" path="res://Scenes/V1/HelperScenes/resource_bars.tscn" id="2_p80sj"]
[ext_resource type="Script" path="res://Scenes/V1/IntroNode.gd" id="3_hc6hp"]
[ext_resource type="PackedScene" uid="uid://c8f4mcc3rud31" path="res://Scenes/V1/textLog.tscn" id="3_jrjqm"]
[ext_resource type="PackedScene" uid="uid://bn8hnol6uyqaw" path="res://Scenes/V1/HelperScenes/StatusEffects.tscn" id="3_yaejt"]
[ext_resource type="PackedScene" uid="uid://dm341wa6fbmdy" path="res://Scenes/V1/HelperScenes/actions.tscn" id="4_ng7rg"]
[ext_resource type="Script" path="res://Scenes/V1/BonusResourceManager.gd" id="6_82wt1"]

[node name="ScreenLeft" type="VBoxContainer"]
offset_right = 1420.0
offset_bottom = 1092.0
size_flags_horizontal = 3
script = ExtResource("1_4yvj6")

[node name="HB" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VB" type="VBoxContainer" parent="HB"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2

[node name="ResourceBars" parent="HB/VB" instance=ExtResource("2_p80sj")]
layout_mode = 2

[node name="VB2" type="VBoxContainer" parent="HB"]
custom_minimum_size = Vector2(900, 61)
layout_mode = 2

[node name="WoodCountLabel" type="Label" parent="HB/VB2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 44
text = "You have 435435 Wood."
horizontal_alignment = 1

[node name="StatusEffects" parent="HB" instance=ExtResource("3_yaejt")]
layout_mode = 2

[node name="Actions" parent="." instance=ExtResource("4_ng7rg")]
layout_mode = 2

[node name="BotHBox" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 280)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BotHBox"]
custom_minimum_size = Vector2(638, 0)
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TextLogScroll" parent="BotHBox/MarginContainer" instance=ExtResource("3_jrjqm")]
layout_mode = 2

[node name="TextLogVisibilityTimer" type="Timer" parent="BotHBox/MarginContainer"]
wait_time = 6.0
one_shot = true

[node name="RevvedBar" type="VBoxContainer" parent="BotHBox"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="RevvedLabel" type="Label" parent="BotHBox/RevvedBar"]
layout_mode = 2
text = "Level 4"
horizontal_alignment = 1

[node name="RevvedBar" type="ColorRect" parent="BotHBox/RevvedBar"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.529412, 0.286275, 0.556863, 1)

[node name="Margin" type="ColorRect" parent="BotHBox/RevvedBar"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
color = Color(0.529412, 0.286275, 0.556863, 0)

[node name="BonusResourceManager" type="Node" parent="." groups=["BonusNode"]]
script = ExtResource("6_82wt1")

[node name="IntroNode" type="Node" parent="."]
script = ExtResource("3_hc6hp")

[node name="IntroButton" type="Button" parent="IntroNode"]
visible = false
custom_minimum_size = Vector2(0, 40)
offset_left = 361.0
offset_top = -98.0
offset_right = 411.0
offset_bottom = -58.0
theme_override_font_sizes/font_size = 25
text = "Swim"

[node name="IntroTimer" type="Timer" parent="IntroNode/IntroButton" groups=["IntroActionPeriodTimer"]]
wait_time = 10.0
one_shot = true

[node name="PhaseThreeStartDelayTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="PhaseFourStartDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="PhaseFiveStartDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BotHBox/MarginContainer/TextLogVisibilityTimer" to="." method="_on_text_log_visibility_timer_timeout"]
[connection signal="button_down" from="IntroNode/IntroButton" to="IntroNode" method="_on_intro_button_button_down"]
[connection signal="timeout" from="IntroNode/IntroButton/IntroTimer" to="IntroNode" method="_on_intro_timer_timeout"]
[connection signal="timeout" from="PhaseThreeStartDelayTimer" to="." method="_on_phase_three_start_delay_timer_timeout"]
[connection signal="timeout" from="PhaseFourStartDelayTimer" to="." method="_on_phase_four_start_delay_timer_timeout"]
[connection signal="timeout" from="PhaseFiveStartDelayTimer" to="." method="_on_phase_five_start_delay_timer_2_timeout"]
